# UniCalib

./: .gitattributes  .gitignore  BUILD_AND_RUN_GUIDE.md  BUILD_EXTERNAL_TOOLS.md  CALIB_UNIFIED_USAGE.md  CHANGELOG_Improvements.md  CMAKELISTS_BASALT_PANGOLIN_INTEGRATION.md  CMAKELISTS_IMPROVEMENTS.md  CODE_MODIFICATION_COMPLETENESS_ANALYSIS.md  COMPILATION_CONDITIONAL_ANALYSIS.md  COMPILATION_IMPROVEMENT_PROPOSAL.md  COMPILATION_MATRIX.txt  DECISION_MATRIX_AND_MIGRATION_GUIDE.md  DEEP_FIX_PLAN.md  DOCKER_BUILD_RUN_GUIDE.md  EXTERNAL_TOOLS_BUILD_SUMMARY.md  EXTRINSIC_CALIBRATION_SUMMARY.md  FINAL_SOLUTION.md  FINAL_SUMMARY_FOR_USER.md  FIX_BATCH1_SUMMARY.md  FIX_COMPLETE.md  FIX_GLFW_ISSUE.md  FIX_GL_ISSUE.md  FIX_PATH_ERROR.md  FIX_SUMMARY.md  FIX_SUMMARY_20260304.md  GLM_FIX_SUMMARY.md  IKALIBR_BUILD_GUIDE.md  IKALIBR_QUICK_START.md  IKALIBR_ROS2_GUIDE.md  IKALIBR_ROS2_SUMMARY.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  IMPROVEMENTS.md  LIDAR_CAMERA_AND_CAMERA_CAMERA.md  LOCAL_DEPENDENCIES_OPTIMIZATION.md  LOGIC_FIX_PROGRESS.md  MIGRATE_IKALIBR_ROS2.md  MODEL_LOADING_ANALYSIS.md  Makefile  ONE_CLICK_CALIBRATION_ANALYSIS.md  (+37 more)
UniCalib/: CMakeLists.txt  README.md  VISUALIZATION_GUIDE.md  VISUALIZATION_README.md  VISUALIZATION_UPDATE.md  package.xml  setup.cfg  setup.py
UniCalib/config/: unicalib_config.yaml
UniCalib/config/sensor_templates/: bmi088_imu.yaml  livox_mid360.yaml  velodyne_vlp16.yaml
UniCalib/config/vehicle_configs/: example_vehicle.yaml
UniCalib/launch/: calibrate.launch.py  visualize.launch.py
UniCalib/scripts/: calibration_with_visualization.py  collect_data.py  run_calibration.py  visualize_results.py  visualize_results_v2.py
UniCalib/tests/: test_extrinsic.py  test_integration.py  test_intrinsic.py
UniCalib/unicalib/: __init__.py  ros2_node.py
UniCalib/unicalib/core/: __init__.py  calib_result.py  data_manager.py  sensor_config.py  system.py
UniCalib/unicalib/extrinsic/: __init__.py
UniCalib/unicalib/intrinsic/: __init__.py  allan_variance.py  camera_fisheye.py  camera_pinhole.py  imu_intrinsic.py
UniCalib/unicalib/utils/: __init__.py  realtime_visualizer.py  ros_utils.py  transforms.py  visualization.py  visualization_v2.py
UniCalib/unicalib/validation/: __init__.py  click_calib_wrapper.py  colorization.py  edge_alignment.py  interactive_report.py  report_generator.py  reprojection.py
calib_unified/: CMakeLists.txt  README.md  build.sh
calib_unified/apps/cam_cam_extrin/: main.cpp
calib_unified/apps/camera_intrinsic/: main.cpp
calib_unified/apps/imu_intrinsic/: main.cpp
calib_unified/apps/imu_lidar_extrin/: main.cpp
calib_unified/apps/joint_calib/: main.cpp
calib_unified/apps/lidar_camera_extrin/: main.cpp
calib_unified/config/: camera_intrinsic_example.yaml  imu_intrinsic_example.yaml  joint_example.yaml  unicalib_example.yaml
calib_unified/docs/: ARCHITECTURE_AND_EXCEPTIONS.md  LOGGING_AND_RESULTS.md  ROS2_INTEGRATION.md  UNICALIB_CONFIG_READING.md
calib_unified/include/ikalibr/: opengv_stub.h  ufo_stub.h
calib_unified/include/unicalib_legacy/: click_calib_wrapper.hpp  data_validator.hpp  report_generator.hpp  sensor_config.hpp
calib_unified/scripts/: plot_calib_accuracy.py
calib_unified/src/common/: accuracy_logger.cpp  calib_param.cpp  exception_report.cpp  sensor_types.cpp
calib_unified/src/extrinsic/: cam_cam_calib.cpp  imu_lidar_calib.cpp  lidar_camera_calib.cpp
calib_unified/src/intrinsic/: allan_variance.cpp  camera_pinhole_calib.cpp  imu_allan_variance.cpp
calib_unified/src/io/: result_io.cpp  ros2_data_source.cpp  yaml_io.cpp
calib_unified/src/pipeline/: ai_coarse_calib.cpp  calib_pipeline.cpp  manual_calib.cpp
calib_unified/src/solver/: joint_calib_solver.cpp  joint_calib_solver_engineered.cpp
calib_unified/src/unicalib_legacy/: camera_fisheye.cpp  external_tools_config.cpp  interactive_report.cpp  process_runner.cpp  temporal_calibration.cpp  transforms.cpp  visualization_v2.cpp
calib_unified/src/viz/: calib_visualizer.cpp  cloud_viewer.cpp  image_viz.cpp  report_gen.cpp  viewer_stub.cpp
calib_unified/tests/: CMakeLists.txt  test_math_safety.cpp
iKalibr/: CMakeLists.txt  CMakeLists.txt.ros1  apply_all_fixes.sh  build_thirdparty_ros2.sh  fix_ctraj_patch.txt  package.xml  patch_ctraj_remove_tinyviewer.sh  verify_ament_fix.sh  verify_ikalibr_build.sh
iKalibr/docs/details/: build_ikalibr_docker.md  config_template_note.md  sensor_type.md
iKalibr/include/: ikalibr_compat_preinclude.h
iKalibr/include/calib/: calib_param_manager.h
iKalibr/include/core/: feature_tracking.h  visual_distortion.h
iKalibr/include/pclomp/: ndt_omp.hpp
iKalibr/include/ros/: ros.h
iKalibr/include/rosbag/: bag.h  message_instance.h  view.h
iKalibr/include/sensor/: camera_data_loader.h  lidar_data_loader.h
iKalibr/include/solver/: calib_solver.h
iKalibr/include/util/: cloud_define.hpp  status.hpp
iKalibr/include/velodyne_msgs/: VelodyneScan.h
iKalibr/include/viewer/: viewer.h  viewer_stub.h  viewer_types.h  (+2 more)
iKalibr/msg/: AWR1843RadarScan.msg  AWR1843RadarScanCustom.msg  DVSEventArray.msg  LivoxCustomMsg.msg  PropheseeEvent.msg  PropheseeEventArray.msg  SbgImuData.msg
unicalib_C_plus_plus/: BUILD_AND_RUN.md  CMakeLists.txt  CONVERSION_STATUS.md  DEEP_INTEGRATION.md  INTEGRATION_ANALYSIS.md  INTERACTIVE_AND_REALTIME_CPP.md  README.md  VISUALIZATION_CPP_SUMMARY.md  VISUALIZATION_GUIDE_CPP.md
unicalib_C_plus_plus/config/: sensors.yaml  sensors_docker.yaml  unicalib_config_optimized.yaml
unicalib_C_plus_plus/examples/: example_main.cpp  optimization_example.cpp  realtime_visualization_example.cpp  visualization_example.cpp
unicalib_C_plus_plus/src/: allan_variance.cpp  calib_result.cpp  calibration_quality.cpp  click_calib_wrapper.cpp  data_manager.cpp  data_validator.cpp  dm_calib_wrapper.cpp  exceptions.cpp  feature_matching.cpp  ikalibr_wrapper.cpp  imu_intrinsic.cpp  iterative_refinement.cpp  learn_to_calib_wrapper.cpp  logger.cpp  mias_lcec_wrapper.cpp  realtime_visualizer.cpp  report_generator.cpp  reprojection.cpp  sensor_config.cpp  system.cpp  temporal_calibration.cpp
(+349 files in other folders)
