<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unicalib</name>
  <version>1.0.0</version>
  <description>
    UniCalib: Unified Multi-Sensor Automatic Calibration System.
    Supports IMU intrinsic, camera intrinsic (pinhole + fisheye),
    LiDAR-Camera extrinsic, IMU-LiDAR extrinsic, Camera-Camera extrinsic,
    and temporal offset calibration via a 4-stage pipeline:
    intrinsic → coarse extrinsic (learning-based) → fine extrinsic (optimization) → validation.
  </description>
  <maintainer email="calib@example.com">UniCalib Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>rosbag2_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
